--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: #0f2027; /* fallback for old browsers */
   background: -webkit-linear-gradient(
@@ -13,3 +17,7 @@ body {
     #0f2027
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+/* logo attribution:
+<a href="https://www.freepik.com/free-vector/joystick-game-sport-technology_10549680.htm#query=video%20game%20logo&position=11&from_view=search&track=ais">Image by catalyststuff</a> on Freepik
+*/
