--- a/main.css
+++ b/main.css
@@ -1,8 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,400,900");
+@import url("https://fonts.googleapis.com/css?family=Anton");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
+
 * {
   box-sizing: border-box;
 }
 
 body {
+  font-family: "Montserrat", sans-serif;
   background: #0f2027; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -16,6 +21,11 @@ body {
     #203a43,
     #0f2027
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+h1 {
+  color: white;
+  font-weight: bold;
 }
 
 /* logo attribution:
